feat: add support conditional operators
